objects/CIAM_Import_Table__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Agent_ID__c</fullName>
        <description>This will be the concatination of Agency federal tax id and Agent SSN. this field needs to be unique too</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency_Agent_ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_ID__c</fullName>
        <description>This field will hold the agency ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent_First Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>this field will hold the Agent's entity Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Last Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Middle_Initial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Middle Initial</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Title__c</fullName>
        <label>Broker Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>General Broker</fullName>
                </value>
                <value>
                    <fullName>Direct Broker</fullName>
                </value>
                <value>
                    <fullName>Principal Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <description>This field holds Federation ID/GUID provided by CIAM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Federation ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <description>This will be a table to store CIAM data for the initial piece of user provisioning where data loaded into this table will be used to create the Community User contact and Community User records.</description>
    <label>CIAM Import Table</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIAM Import Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIAM Import Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency_Agent_ID__c</columns>
        <columns>Agency_ID__c</columns>
        <columns>Agent_ID__c</columns>
        <columns>Broker_Title__c</columns>
        <columns>Processed__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Agent_First_Name__c</columns>
        <columns>Agent_Last_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllProcessed</fullName>
        <columns>NAME</columns>
        <columns>Agency_Agent_ID__c</columns>
        <columns>Agency_ID__c</columns>
        <columns>Agent_ID__c</columns>
        <columns>Broker_Title__c</columns>
        <columns>Processed__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Agent_First_Name__c</columns>
        <columns>Agent_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Processed</label>
    </listViews>
    <listViews>
        <fullName>Test_view</fullName>
        <columns>Agency_Agent_ID__c</columns>
        <columns>Agency_ID__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Agency_Type__c</columns>
        <columns>Agent_First_Name__c</columns>
        <columns>Agent_ID__c</columns>
        <columns>Agent_Last_Name__c</columns>
        <columns>Broker_Title__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Federation_ID__c</columns>
        <columns>Processed__c</columns>
        <columns>User_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Test view</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
</CustomObject>